# HybridParallelizationTest

./: CMakeLists.txt  IO.c  IO.h  jobShare.c  main.c  notifyProcesses.c  queue.c  queue.h  simpleTest.c  test.h  testQueue.c
data/: data.txt
